--- a/package.json
+++ b/package.json
@@ -3,37 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "fmt": "pnpm rome check . --apply-unsafe && pnpm rome format . --write"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
     "@next/font": "^13.5.4",
     "@next/mdx": "^13.5.4",
     "@upstash/redis": "^1.23.3",
-    "contentlayer": "^0.3.4",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.284.0",
-    "markdown-wasm": "^1.2.0",
-    "next": "^13.5.4",
-    "next-contentlayer": "^0.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "eslint-config-next": "^15.1.3",
+    "next": "15.1.3",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "contentlayer": "0.3.4",
+    "framer-motion": "10.16.4",
+    "lucide-react": "0.284.0",
+    "esbuild": "0.19.4"
+    },
+    "overrides": {
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "@contentlayer/core": {
+      "esbuild": "0.19.4"
+    },
+    "framer-motion": {
+      "react": "19.0.0-rc.1",
+      "react-dom": "19.0.0-rc.1"
+    },
+    "lucide-react": {
+      "react": "19.0.0-rc.1",
+      "react-dom": "19.0.0-rc.1"
+    },
     "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "3.0.1",
-    "typescript": "^5.2.2"
+    "three": "^0.172.0",
+    "typescript": "^5.2.2",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@opentelemetry/api": "1.6.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.4",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "postcss-nesting": "^12.0.1",
@@ -53,3 +71,5 @@
     }
   }
 }
+
+
