--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/font": "^13.5.4",
     "@next/mdx": "^13.5.4",
+    "@nextui-org/card": "^2.2.8",
+    "@nextui-org/react": "^2.6.10",
     "@upstash/redis": "^1.23.3",
-    "eslint-config-next": "^15.1.3",
-    "next": "15.1.3",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
     "contentlayer": "0.3.4",
+    "esbuild": "0.19.4",
+    "eslint-config-next": "^15.1.3",
     "framer-motion": "10.16.4",
     "lucide-react": "0.284.0",
-    "esbuild": "0.19.4"
-    },
-    "overrides": {
+    "next": "15.1.3",
+    "next-contentlayer": "^0.3.4",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "react-icons": "^5.4.0",
+    "three": "^0.172.0",
+    "vanta": "^0.5.24"
+  },
+  "overrides": {
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
     "@contentlayer/core": {
@@ -71,5 +77,3 @@
     }
   }
 }
-
-
