--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
     "react-icons": "^5.4.0",
+    "remark-gfm": "^4.0.0",
     "three": "^0.172.0",
-    "vanta": "^0.5.24"
+    "vanta": "^0.5.24",
+    "vercel": "^39.2.5"
   },
   "overrides": {
     "react": "19.0.0-rc.1",
